# dashboard-oswi

./: .gitignore  app.py  datasets.py  graphs.py  home.py  main.py  maps.py  pyproject.toml  requirements.txt  tests.py
.streamlit/: config.toml
data/: choropleth.csv  colabs_network.csv  countries.csv  countries_dbr.csv  dbr_choropleth.csv  dbr_colabs_network.csv  dbr_doc_type.csv  dbr_funded_countries.csv  dbr_funding_ents.csv  dbr_journal.csv  dbr_language+plot.csv  dbr_numCollaborators.csv  doc_type.csv  funded_countries.csv  funding_ents.csv  journal.csv  language.csv  numCollaborators.csv
maps/: colabs_network.html  dbr_colabs_network.html
