[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "plotly-express>=0.4.1",
    "plotly>=6.1.2",
    "streamlit>=1.45.1",
    "millify>=0.1.1",
    "squarify>=0.4.4",
    "matplotlib>=3.10.3",
]
